--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,14 +3,10 @@ owner: Loapu # Your GitHub organization or username, where this repository lives
 repo: status.loapu.dev # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: Homepage
+    url: https://loapu.dev
+  - name: Documentation
+    url: https://docs.loapu.dev
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
@@ -18,10 +14,10 @@ status-website:
   cname: status.loapu.dev
   # baseUrl: /your-repo-name
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Loapu Status
-  theme: dark
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  name: Loapu Status Page
+  theme: night
+  introTitle: "Welcome to my private status page"
+  introMessage: The sites listed here are either made or at least managed by me.
   navbar:
     - title: Status
       href: /
