--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -13,7 +13,7 @@ status-website:
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   cname: status.loapu.dev
   # baseUrl: /your-repo-name
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
+  logoUrl: https://avatars.githubusercontent.com/u/7953031?s=256&v=4
   name: Loapu Status Page
   theme: night
   introTitle: "Welcome to my private status page"
