--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -7,6 +7,9 @@ sites:
     url: https://loapu.dev
   - name: Documentation
     url: https://docs.loapu.dev
+    
+assignees:
+  - Loapu
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
